manifests/apps/golang-gitwebhook-service/base/deploy.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  namespace: golang-cicd
  labels:
    app: golang-gitwebhook-interface
    app.kubernetes.io/component: golang-gitwebhook-interface
    app.kubernetes.io/instance: golang-gitwebhook-interface
    name: golang-gitwebhook-interface
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: golang-gitwebhook-interface
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: golang-gitwebhook-interface
      
    spec:
      containers:
        - resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /isalive
              port: 9000
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 1
          terminationMessagePath: /dev/termination-log
          name: golang-gitwebhook-interface
          livenessProbe:
            httpGet:
              path: /isalive
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 55
            timeoutSeconds: 5
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 2
          ports:
            - containerPort: 9000
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: >-
            quay.io/luigizuccarelli/golang-gitwebhook-service:1.15.6
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
